--- a/cqdat/styles.css
+++ b/cqdat/styles.css
@@ -1,3 +1,42 @@
+body {
+	font-family: 'Montserrat'
+}
+.center {
+	/* https://www.w3schools.com/howto/howto_css_image_center.asp */
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+#statement {
+	font-size: 60px;
+	text-align: center;
+	color: rgb(0, 100, 200);
+}
+#spec {
+	font-size: 30px;
+	color: rgb(0, 100, 200);
+	margin-left: 50px;
+}
+#ptext {
+	font-size: 15px;
+	text-align: left;
+	margin-left: 100px;
+	margin-right: 100px;
+	padding: 10px
+}
+#code {
+	background-color: rgb(240, 240, 240);
+	font-size: 15px;
+	text-align: left;
+	margin-left: 60px;
+	margin-right: 100px;
+	padding-left: 50px;
+}
+#sub {
+	font-size: 20px;
+	text-align: center;
+	color: rgb(0, 80, 180);
+}
 .cr {
 	font-size: 70px;
     color: rgb(0, 0, 0);
@@ -19,8 +58,10 @@
     margin-top: 0px;
     font-family: 'Montserrat';
 }
+#menu {
+	margin-bottom: 20px;
+}
 #menu ul {
-	margin: 20;
 	padding: 0;
 	list-style-type: none;
 	text-align: center;
@@ -32,7 +73,24 @@
 #menu ul li a {
 	text-decoration: none;
 	padding: .8em 4em;
+	color: rgb(255, 255, 255);
+	background-color: rgb(0, 140, 200);
+	border-radius: 3px 3px 3px 3px;
+}
 
+#probs ul {
+	padding: 0;
+	list-style-type: none;
+	text-align: center;
+}
+#probs ul li {
+	display: nowrap;
+	white-space: normal;
+	margin-bottom: 40px;
+}
+#probs ul li a {
+	text-decoration: none;
+	padding: 1em 20em;
 	color: rgb(255, 255, 255);
 	background-color: rgb(0, 140, 200);
 	border-radius: 3px 3px 3px 3px;
