--- a/cqdat/styles.css
+++ b/cqdat/styles.css
@@ -160,6 +160,57 @@ body {
 #p37 {
     background-color: rgb(200, 0, 0)
 }
+#p38 {
+    background-color: rgb(10, 190, 0)
+}
+#p39 {
+    background-color: rgb(40, 160, 0)
+}
+#p40 {
+    background-color: rgb(20, 180, 0)
+}
+#p41 {
+    background-color: rgb(30, 170, 0)
+}
+#p42 {
+    background-color: rgb(40, 160, 0)
+}
+#p43 {
+    background-color: rgb(60, 140, 0)
+}
+#p44 {
+    background-color: rgb(60, 140, 0)
+}
+#p45 {
+    background-color: rgb(100, 100, 0)
+}
+#p46 {
+    background-color: rgb(90, 110, 0)
+}
+#p47 {
+    background-color: rgb(90, 110, 0)
+}
+#p48 {
+    background-color: rgb(100, 100, 0)
+}
+#p49 {
+    background-color: rgb(110, 90, 0)
+}
+#p50 {
+    background-color: rgb(130, 70, 0)
+}
+#p51 {
+    background-color: rgb(130, 70, 0)
+}
+#p52 {
+    background-color: rgb(130, 70, 0)
+}
+#p53 {
+    background-color: rgb(190, 10, 0)
+}
+#p54 {
+    background-color: rgb(190, 10, 0)
+}
 #crred {
     color: rgb(255, 0, 0);
 }
