--- a/cqdat/styles.css
+++ b/cqdat/styles.css
@@ -211,6 +211,51 @@ body {
 #p54 {
     background-color: rgb(190, 10, 0)
 }
+#p55 {
+    background-color: rgb(10, 190, 0)
+}
+#p56 {
+    background-color: rgb(10, 190, 0)
+}
+#p57 {
+    background-color: rgb(30, 170, 0)
+}
+#p58 {
+    background-color: rgb(50, 150, 0)
+}
+#p59 {
+    background-color: rgb(70, 130, 0)
+}
+#p60 {
+    background-color: rgb(110, 90, 0)
+}
+#p61 {
+    background-color: rgb(100, 100, 0)
+}
+#p62 {
+    background-color: rgb(100, 100, 0)
+}
+#p63 {
+    background-color: rgb(120, 80, 0)
+}
+#p64 {
+    background-color: rgb(80, 120, 0)
+}
+#p65 {
+    background-color: rgb(130, 70, 0)
+}
+#p66 {
+    background-color: rgb(150, 50, 0)
+}
+#p67 {
+    background-color: rgb(170, 30, 0)
+}
+#p68 {
+    background-color: rgb(180, 20, 0)
+}
+#p69 {
+    background-color: rgb(200, 0, 0)
+}
 #crred {
     color: rgb(255, 0, 0);
 }
