--- a/cqdat/styles.css
+++ b/cqdat/styles.css
@@ -256,6 +256,105 @@ body {
 #p69 {
     background-color: rgb(200, 0, 0)
 }
+#p70 {
+    background-color: rgb(10, 190, 0)
+}
+#p71 {
+    background-color: rgb(40, 160, 0)
+}
+#p72 {
+    background-color: rgb(30, 170, 0)
+}
+#p73 {
+    background-color: rgb(70, 130, 0)
+}
+#p74 {
+    background-color: rgb(50, 150, 0)
+}
+#p75 {
+    background-color: rgb(70, 130, 0)
+}
+#p76 {
+    background-color: rgb(90, 110, 0)
+}
+#p77 {
+    background-color: rgb(110, 90, 0)
+}
+#p78 {
+    background-color: rgb(100, 100, 0)
+}
+#p79 {
+    background-color: rgb(100, 100, 0)
+}
+#p80 {
+    background-color: rgb(120, 80, 0)
+}
+#p81 {
+    background-color: rgb(110, 90, 0)
+}
+#p82 {
+    background-color: rgb(160, 40, 0)
+}
+#p83 {
+    background-color: rgb(140, 60, 0)
+}
+#p84 {
+    background-color: rgb(190, 10, 0)
+}
+#p85 {
+    background-color: rgb(200, 0, 0)
+}
+#p86 {
+    background-color: rgb(10, 190, 0)
+}
+#p87 {
+    background-color: rgb(20, 180, 0)
+}
+#p88 {
+    background-color: rgb(30, 170, 0)
+}
+#p89 {
+    background-color: rgb(20, 180, 0)
+}
+#p90 {
+    background-color: rgb(40, 160, 0)
+}
+#p91 {
+    background-color: rgb(50, 150, 0)
+}
+#p92 {
+    background-color: rgb(60, 140, 0)
+}
+#p93 {
+    background-color: rgb(50, 150, 0)
+}
+#p94 {
+    background-color: rgb(60, 140, 0)
+}
+#p95 {
+    background-color: rgb(80, 120, 0)
+}
+#p96 {
+    background-color: rgb(90, 110, 0)
+}
+#p97 {
+    background-color: rgb(90, 110, 0)
+}
+#p98 {
+    background-color: rgb(100, 100, 0)
+}
+#p99 {
+    background-color: rgb(120, 80, 0)
+}
+#p100 {
+    background-color: rgb(160, 40, 0)
+}
+#p101 {
+    background-color: rgb(140, 60, 0)
+}
+#p102 {
+    background-color: rgb(180, 20, 0)
+}
 #crred {
     color: rgb(255, 0, 0);
 }
